# Rust-Game-Of-Life

./: Cargo.toml  README.md
src/: board.rs  game_context.rs  grid.rs  main.rs  old_event.rs  old_main.rs  position.rs
src/game/: event.rs  player.rs
src/tree/: mod.rs  test.rs  utils.rs
src/utils/: tree.rs
