[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
rand = "0.8.5"
rayon = "1.8.0"
sdl2 = { version = "0.37.0", features = ["bundled"] }
vecmath = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html